source/sass/style.scss
/* ... */
.content {
  flex: 1 0 auto;
}

.link:hover,
.btn:hover {
  cursor: pointer;
}

.container {
  width: 1366px;
  margin: 0 auto;
}

.header {
  background: url("../img/header-bg.jpg") no-repeat 50% 0;
  background: conic-gradient(from 250deg at 16.03% 39.06%, #003D85, #B80027, #003D85);
}

.header-wrapper {
  padding: 30px 103px 50px;


  color: #FFFFFF;

  .header-top {
    display: flex;
    justify-content: space-between;
  }

  .header-main {
    display: flex;
    justify-content: flex-end;

    margin-top: -5px;
  }

  .header-main-info {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    flex: 0 0 400px;

    padding-bottom: 43px;
  }

  .header-image {
    margin: 0 185px 0 65px;
  }

  .header-company-name {
    text-decoration: none;
    color: #fff;
    font-family: "Bebas Neue", Arial, sans-serif;
    font-size: 26px;
    line-height: 26px;
    letter-spacing: 0.02em;
    vertical-align: baseline;
  }
  .header-phone {
    text-decoration: none;
    color: #fff;
    font-family: "Bebas Neue", Arial, sans-serif;
    font-size: 26px;
    line-height: 26px;
    letter-spacing: 0.03em;
    vertical-align: baseline;
  }

  .header-phone:hover {
    text-decoration: underline;
  }

  .city-name {
    font-family: "Bebas Neue", Arial, sans-serif;
    font-size: 49px;
    line-height: 49px;
    letter-spacing: 0.03em;
    text-align: right;
  }

  .fitness-name {
    margin-top: 12px;
    margin-bottom: 48px;
    position: relative;

    text-align: right;
  }

  .fitness-caption {
    font-family: "Bebas Neue", Arial, sans-serif;
    font-size: 109px;
    line-height: 109px;
    font-weight: bold;
    display: inline;
    letter-spacing: 0.03em;
    vertical-align: baseline;
  }

  .header-list {
    text-align: right;
    list-style: none;

    position: absolute;
    bottom: 35px;
    right: 265px;
    margin: 0;
    padding: 0;
  }
  .header-list-item {
    font-family: "Roboto Condensed", Arial, sans-serif;
    font-weight: 300;
    font-size: 14px;
    letter-spacing: normal;
    line-height: 150%;
  }


  .buy-button {
    border: 4px solid #ffffff;
    width: 225px;
    height: 55px;
    align-self: flex-end;
    position: relative;
    text-align: center;

    background-color: transparent;

    font-family: "Roboto Condensed", Arial, sans-serif;
    font-weight: bold;
    font-size: 12px;
    line-height: 56px;
    color: #ffffff;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 0.05em;

    &:hover {
      cursor: pointer;
      box-shadow: 0 0 2px 1px #fff;
    }

    &:active {
      top: 1px;
    }
  }

  .social-links {
    font-family: "Roboto Condensed", Arial, sans-serif;
    font-size: 12px;
    line-height: 14px;
    text-align: right;
    text-transform: uppercase;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    margin-bottom: 20px;
  }
  .social-link {
    margin-bottom: 20px;
    text-decoration: none;
    vertical-align: baseline;

    color: #fff;

    &:hover {
      text-decoration: underline;
    }
  }
}

.gym {
  display: flex;
  justify-content: space-between;
  padding: 120px 103px;

  .gym-text {
    width: 355px;
    color: #102654;
  }

  .text {
    font-family: "Roboto Condensed", Arial, sans-serif;
    font-style: normal;
    font-weight: 300;
    font-size: 16px;
    line-height: 150%;
  }

  .note {
    font-weight: 400;
    font-size: 18px;
    margin-bottom: 50px;
  }

  .gym-image {
    position: relative;
    padding-bottom: 115px;
    padding-left: 65px;
  }
  .gym-image--gym2 {
    position: absolute;
    bottom: 0;
    left: 0;
  }
  .gym-image-play-button-wrapper {
    background: rgba(20, 54, 122, 0.5);
    width: 364px;
    height: 228px;
    position: absolute;
    bottom: 0;
    left: 0;
  }
  .gym-image-play-button {
    position: absolute;
    bottom: 64px;
    left: 132px;
    &:hover {
      border-radius: 50%;
      box-shadow: 0 0 1px 2px rgba(20, 54, 122, 0.5);
      cursor: pointer;
    }
  }
}
.section-header {
  font-family: "Bebas Neue", Arial, sans-serif;
  font-weight: 700;
  font-size: 49px;
  line-height: 49px;
  margin-bottom: 20px;
  color: #102654;
}

.subscriptions {
  background-color: #F8F9FC;
}

.subscriptions-wrapper {
  text-align: center;
  padding: 120px 103px;
  position: relative;
  z-index: 1;

  .section-header {
    margin-top: 0;
  }
}

.tab-links {
  display: flex;
  justify-content: center;
  margin-bottom: 39px;
}
.tab-link {
  border-bottom: 2px solid rgba(120, 120, 120, 0.2);
  font-family: "Roboto Condensed", Arial, sans-serif;
  font-size: 20px;
  line-height: 150%;
  color: rgba(16, 38, 84, 0.5);
  padding: 20px 23px 0;

  &:first-child {
    padding-left: 0;
  }
  &:last-child {
    padding-right: 0;
  }
  span {
    padding-bottom: 20px;
    display: inline-block;
    margin-bottom: -2px;
    &:hover{
      cursor: pointer;
    }
  }
}
.active-tab {
  color: #102654;
  span {
    border-bottom: 2px solid #D10A42;
  }
}

.tab-content {
  justify-content: space-between;
  display: none;

  &.active {
    display: flex;
  }
  .buy-button {
    border: 2px solid #102654;
    width: 206px;
    height: 64px;
    text-align: center;
    position: relative;

    background-color: transparent;

    font-family: "Roboto Condensed", Arial, sans-serif;
    font-weight: bold;
    font-size: 12px;
    line-height: 60px;
    color: #102654;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 0.05em;

    display: inline-block;
    box-sizing: border-box;
    vertical-align: baseline;

    &:hover {
      cursor: pointer;
      box-shadow: 0 0 2px 1px #102654;
    }

    &:active {
      top: 1px;
    }
  }
}
/* ... */

